--- a/themes/peanutPower/assets/src/scss/elements/_element.heading.scss
+++ b/themes/peanutPower/assets/src/scss/elements/_element.heading.scss
@@ -1,6 +1,6 @@
 h1 {
-    background: rgb(20, 75, 96);
-    background: linear-gradient(90deg, rgba(20, 75, 96, 1) 0%, rgba(28, 142, 118, 1) 100%);
+    background: $dark-teal;
+    background: linear-gradient(90deg, $dark-teal 0%, #4d9f0c 90%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
